@@ -1,0 +1,10 @@
+import java.util.Scanner;
+
+import screens.StartingScreen;
+
+public class Main {
+	public static void main(String[] args) {
+		Scanner s = new Scanner(System.in);
+		new StartingScreen(s);
+	}
+}
