@@ -1,5 +1,9 @@
 -- Changelog --
 
+12/22/2018
+- starting to work on abstracting a lot of components of the engine for 
+cleaner code; currently very incomplete
+
 12/21/2018
 - initial push of rough code I wrote a week ago
 - removed Test.java, as well as a cruder README.md than what is already up
